--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dz4tg6vyg/image/upload/v1747036072/logo-removebg-preview-modified_bwueyx.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rabin Poudel</title>
     <link href="/src/styles.css" rel="stylesheet" />
