--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dz4tg6vyg/image/upload/v1747036072/logo-removebg-preview-modified_bwueyx.png" />
+<link
+  href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
+  rel="stylesheet"
+/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rabin Poudel</title>
     <link href="/src/styles.css" rel="stylesheet" />
