new update with section below technologies

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
   rel="stylesheet"
 />
+<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Montserrat&family=Poppins&family=Inter&family=Lato&display=swap" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rabin Poudel</title>
     <link href="/src/styles.css" rel="stylesheet" />
