--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rabin Poudel</title>
     <link href="/src/styles.css" rel="stylesheet" />
+    
+<link rel="stylesheet" href="index-Bqw_J1jA.css">
   </head>
   <body>
     <div id="root"></div>
