--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Rabin Poudel</title>
     <link href="/src/styles.css" rel="stylesheet" />
     
-<link rel="stylesheet" href="index-Bqw_J1jA.css">
+<!-- <link rel="stylesheet" href="index-Bqw_J1jA.css"> -->
   </head>
   <body>
     <div id="root"></div>
